# upnp-c

./: CMakeLists.txt  README.md
res/: action_request.xml  action_request2.xml  action_response.xml  device.xml  nested_device.xml  property.xml  scpd.xml
src/: CMakeLists.txt  clock.c  clock.h  control-point.c  http_client.c  http_client.h  http_header.c  http_header.h  http_response.c  http_response.h  http_server.c  http_server.h  listutil.c  listutil.h  namevalue.c  namevalue.h  networkutil.c  networkutil.h  property.c  property.h  public.h  server.c  ssdp.h  ssdp_header.c  ssdp_header.h  ssdp_msearch_sender.c  ssdp_msearch_sender.h  ssdp_receiver.c  ssdp_receiver.h  strutil.c  strutil.h  upnp_action_invoke.c  upnp_action_invoke.h  upnp_control_point.c  upnp_control_point.h  upnp_models.c  upnp_models.h  upnp_serialize.c  upnp_serialize.h  upnp_server.c  (+5 more)
test/: CMakeLists.txt  test.c
